--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,68 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+*.iml
+android/.gradle
+android/local.properties
+android/.idea/workspace.xml
+android/.idea/libraries
+*/.DS_Store
+android/build
+android/captures
+android/.externalNativeBuild
+
+
+# OSX
+#
+.DS_Store
+
+# Xcode
+#
+rn/build/
+rn/*.pbxuser
+rn/!default.pbxuser
+rn/*.mode1v3
+rn/!default.mode1v3
+rn/*.mode2v3
+rn/!default.mode2v3
+rn/*.perspectivev3
+rn/!default.perspectivev3
+rn/xcuserdata
+rn/*.xccheckout
+rn/*.moved-aside
+rn/DerivedData
+rn/*.hmap
+rn/*.ipa
+rn/*.xcuserstate
+rn/project.xcworkspace
+
+# Android/IntelliJ
+#
+rn/build/
+rn/.idea
+rn/.gradle
+rn/local.properties
+rn/*.iml
+
+# node.js
+#
+rn/node_modules/
+rn/npm-debug.log
+rn/yarn-error.log
+
+# BUCK
+rn/buck-out/
+rn/\.buckd/
+*.keystore
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://docs.fastlane.tools/best-practices/source-control/
+
+*/fastlane/report.xml
+*/fastlane/Preview.html
+*/fastlane/screenshots
